[gd_scene load_steps=2 format=3 uid="uid://b5iwxgdpycxce"]

[ext_resource type="Script" path="res://scripts/title.gd" id="1_1x5ng"]

[node name="Title" type="Node2D"]
script = ExtResource("1_1x5ng")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -48.0
offset_right = -40.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2
text = "GAME START"

[node name="CheckBox" type="CheckButton" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2
tooltip_text = "Choices have a time limit, but you get a score multiplier."
text = "Time Attack"

[node name="Button2" type="Button" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2
text = "QUIT GAME"

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 64.0
offset_right = 60.0
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "High Score: 10000"
horizontal_alignment = 1

[connection signal="pressed" from="CanvasLayer/UI/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="toggled" from="CanvasLayer/UI/VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="CanvasLayer/UI/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
